# HOMESTRI-remote-experiment

./: .gitignore  Dockerfile  README.md  docker-compose.yml  ompl_planning.yaml  startdummy-xorg.bash
.devcontainer/: dev.dockerfile  devcontainer.json  doxauth.bash
experimentdevel/experiment_env/experiment_world/: demo_world.world  demo_world.world.bak
experimentdevel/experiment_env/experiment_world/interface/: model.sdf
experimentdevel/experiment_env/experiment_world/remote_camera/: model.config
experimentdevel/experiment_env/launch/: demo_gazebo_world.launch  gazebo_world.launch  main_experiment.launch  moveit_camera.rviz  two_arms_gazebo.launch  two_arms_rviz.launch
experimentdevel/experiment_env/scripts/spawn_objects/src/: spawn_objects_node.cpp
experimentdevel/experiment_env/world/: demo_world.world
experimentdevel/launch/: spawn_robot.launch
experimentdevel/pickplace/: package.xml
experimentdevel/pickplace/src/: pickplace.cpp
experimentdevel/planning/: CMakeLists.txt
experimentdevel/planning/launch/: knowledge_base.launch
experimentdevel/planning/pddl/: domain_ur5_e.pddl  problem_ur5_e.pddl
experimentdevel/rosplan_interface_ur/: CMakeLists.txt  package.xml
experimentdevel/rosplan_interface_ur/include/: RPGoto.h  RPPickup.h  RPur.h
experimentdevel/rosplan_interface_ur/src/: RPDrop.cpp  RPGoto.cpp  RPur.cpp
experimentdevel/targetpose/: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.bak2  package.xml
experimentdevel/targetpose/src/: targetpose.cpp
experimentdevel/targetpose/srv/: pickplace.srv
experimentdevel/world/: demo_world.world.bak
src/: pick_and_place.sh  record.sh
src/astrobee_iss/: package.xml
src/astrobee_iss/urdf/: model.urdf
src/astrobee_iss/world/: ISS.world
src/benchmark/: all_planners.launch  all_planners.yaml  spawncubes.sh  warehouse.launch
src/experiment_world/: CMakeLists.txt  PRMconfig.yaml  joint_limits.yaml  joint_limits.yml  package.xml  positions.yaml
src/experiment_world/astrobee_iss/urdf/: model.urdf
src/experiment_world/cargobox/: model.config  model.sdf
src/experiment_world/cargobox/meshes/: cargobox.dae
src/experiment_world/interface/: model.sdf
src/experiment_world/launch/: PRMconfig.yaml  experiment_move_group.launch  main_experiment.launch  moveit_camera.rviz  ompl_planning_pipeline.launch.xml  remote_start.sh  spawn_robot.launch
src/experiment_world/module/: model.sdf
src/experiment_world/remote_camera/: model.sdf
src/experiment_world/world/: ISS.scene  ISS.world  demo_world.world
src/planning/pddl/: domain_ur5_e.pddl  optic.plan  plan.pddl
src/rosplan_interface_ur/include/: RPDrop.h  RPGoto.h
src/rosplan_interface_ur/src/: RPPickup.cpp
src/scripts/: manager.sh  pick_and_place.sh
src/spawn_objects/: CMakeLists.txt  package.xml
src/spawn_objects/include/: spawn_objects_node.h
src/spawn_objects/src/: spawn_objects_node.cpp
src/spawn_objects/srv/: spawn_objects.srv
src/target_pose/: CMakeLists.txt  package.xml
src/target_pose/include/: target_pose_node.h
src/target_pose/include/target_pose/: target_pose_node.h
src/target_pose/src/: target_pose_node.cpp
src/target_pose/srv/: pickplace.srv  reset.srv
src/targetpose/: CMakeLists.txt  samplecalls.sh
src/targetpose/src/: targetpose.cpp
src/ur5_e_planning/: package.xml
src/ur5_e_planning/pddl/: problem.pddl
