<?xml version="1.0"?>
<package format="2">
  <name>rosplan_interface_ur</name>
  <version>0.1.0</version>
  <description>The RPur package which enables rosplan for the ur arm and moveit</description>
  <license>MIT</license>

  <author email="jdekarske@ucdavis.edu">Jason Dekarske</author>
  <maintainer email="jdekarske@ucdavis.edu">Jason Dekarske</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>target_pose</build_depend>
  <build_depend>rosplan_planning_system</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>target_pose</exec_depend>
  <exec_depend>rosplan_planning_system</exec_depend>
</package>