<?xml version="1.0"?>
<package format="2">
  <name>experiment_world</name>
  <version>0.0.0</version>
  <description>The experiment_world package. This is the experimental setup used for a collaborative HAT task.</description>

  <author email="jdekarske@ucdavis.edu">Jason Dekarske</author>
  <maintainer email="jdekarske@ucdavis.edu">Jason Dekarske</maintainer>

  <license>MIT</license>

  <url type="website">https://homestri.ucdavis.edu/</url>
  <url type="repo">https://github.com/jdekarske/HOMESTRI-remote-experiment</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros
    gazebo_media_path="${prefix}/media"
    gazebo_model_path="${prefix}/.." />
  </export>
</package>
